--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -213,3 +213,16 @@
   .image-pop:hover {
     animation: pop 0.3s ease-in-out;
   }
+
+  .hover-zoom img {
+    transition: transform 0.3s ease;
+  }
+
+  .hover-zoom:hover img {
+    transform: scale(1.05);
+  }
+
+  .focus\:ring:focus {
+    --tw-ring-shadow: transparent !important;
+}
+
