--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,7 +21,24 @@
   font-size: 32px;
   line-height: 48px;
 }
+/* CSS Code */
+.swiper-wrapper {
+  width: 100%;
+  height: max-content !important;
+  padding-bottom: 64px !important;
+  -webkit-transition-timing-function: linear !important;
+  transition-timing-function: linear !important;
+  position: relative;
+  }
+  
+  .swiper-pagination-current {
+  color: #ff9e39 !important;
+  }
+  .swiper-pagination-total {
+  color: #ff9e39;
+  }
 
+  
 .pageTitleMedium {
   @apply font-poppinsMedium;
   font-size: 32px;
